pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp.clang-tidy.loop-label.out.log
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:1318:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:1318:7: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:2292:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:2292:5: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:2306:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:2306:5: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:2320:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:2320:5: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:3949:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:3949:7: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/.autopilot/db/pfb.pp.0.cpp:5928:54: error: Invalid Directive: for current device, RAM_1P + BRAM is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=branch_memory type=RAM_1P impl=BRAM
                                                     ^
